--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -18,7 +18,7 @@
 	margin-top: 5px;
 	 
 }
-input[type=text] {
+input[type=text]#name, input[type=text]#message {
 	width:100%;
 	margin-top:5px;
 }
