--- a/backup/webroot/css/style.css
+++ b/backup/webroot/css/style.css
@@ -1,6 +1,7 @@
 
 .panel {
 	margin-right: 3px;
+	margin-top: 10px;
 }
 
 .button {
@@ -25,13 +26,13 @@ input[type=text]#name, input[type=text]#message {
 
 
 .chat_wrapper {
-	width: 20%;
+	width: 500px;
 	height: 500px;
 	margin-right: auto;
 	margin-left: auto;
-	background: #3B5998;
-	border: 1px solid #999999;
-	padding: 10px;
+	/*background: #3B5998;*/
+	/*border: 1px solid #999999;*/
+	padding: 1px;
 	font: 14px 'lucida grande',tahoma,verdana,arial,sans-serif;
 }
 .chat_wrapper .message_box {
@@ -64,8 +65,4 @@ input[type=text]#name, input[type=text]#message {
 textarea#message {
     width: 100%;
     padding: 1px;
-}
-
-b {
-	color: gray;
 }
