--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -70,3 +70,47 @@ b[data-status-flag="0"] {
 b[data-status-flag="1"] {
 	color: green;
 }
+
+#container {
+	padding: 1em;
+}
+
+#content {
+	padding: 2em;
+}
+
+div#container {
+	width: 100%;
+	max-width: 1024px;
+	min-width: 960px;
+	margin: auto;
+}
+
+.left {
+	background-color: red;
+	width: 40%;
+	float: left;
+}
+.right {
+	background-color: green;
+	width: 60%;
+	float: left;
+}
+
+/********
+	HEADER
+*********/
+header nav ul, #content ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+hr {
+	padding: 0;
+	margin: 0;
+}
+header nav ul li {
+	display: inline-block;
+	margin-right: 5px;
+}
+
