--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -71,6 +71,10 @@ b[data-status-flag="1"] {
 	color: green;
 }
 
+b[data-flag="offline"] {
+	/*color: gray !important;*/
+}
+
 #container {
 	padding: 1em;
 }
@@ -87,14 +91,14 @@ div#container {
 }
 
 .left {
-	background-color: red;
-	width: 40%;
-	float: left;
+	background-color: #E3F2FD;
+	/*width: 40%;
+	float: left;*/
 }
 .right {
-	background-color: green;
-	width: 60%;
-	float: left;
+	background-color: #FFF;
+	/*width: 60%;
+	float: left;*/
 }
 
 /********
@@ -114,3 +118,14 @@ header nav ul li {
 	margin-right: 5px;
 }
 
+/***************
+	Login
+***************/
+.form-login {
+	text-align: center;
+}
+input.form-control.btn.btn-success {
+	background: #1565C0;
+	border-radius: 17px;
+	width: 220px;
+}
